--- a/bible_verse/index.html
+++ b/bible_verse/index.html
@@ -4,29 +4,84 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+  <meta name="author" content="Kimgrace">
+  <meta name="keywords" content="Bible verse recommendation">
+  <meta name="description" content="Bible verse recommendation">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <!--sns share-->
+  <meta property="og:url" content="https://flourishing-panda-3d71c9.netlify.app" />
+  <meta property="og:title" content="Bible verse recommendation" />
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="../img/image-0.png"/> <!--추후 이미지 추가-->
+  <meta property="og:description" content="Bible verse recommendation dased on your psycology"/>
 
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
+  <!--favicon-->
+  <link rel="shortcut icon" href="../bible_verse/icon.ico">
+  <link rel="apple-touch-icon-precomposed" href="../bible_verse/icon.png">
 
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+  <title>Bible Verse Recommendation</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/default.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/qna.css">
+  <link rel="stylesheet" href="./css/animation.css">
+  <link rel="stylesheet" href="./css/result.css">
+
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <script>
+    Kakao.init('d359b041b8f22167e4bcea5e372d81c7');
+    Kakao.isInitialized();
+  </script>
 </head>
 
 <body>
-
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+  <div class="container">
+    <section id="main" class="mx-auto mt-5 py-5 px-3">
+      <h2>Bible verse recommendation
+        <br>based on your psychologies</h2>
+      <div class="col-lg-8 col-md-10 col-sm-12 mx-auto py-5">
+        <img src="./img/Bible.jpg" class="img-fluid" alt="mainImage">
+      </div>
+      <p style="font-size: 19px;">
+        당신의 현재 마음 상태는 어떤가요<br>
+        당신의 현재 심리 상태에 맞게 말씀 구절을 추천해 드립니다!
+      </p>
+      <button type="button" onclick="js:begin()" class = "main-button my-3 py-3">Start</button>
+    </section>
 
+    <section id="qna">
+      <p>
+      <div class="status mx-auto mt-5">
+        <div class="statusBar">
+        </div>
+      </div>
+      <div class="qBox my-5 py-5 mx-auto"></div>
+      <div class="answerBox"></div>
+      <div class="home my-5 py-3 mx-auto">
+        <button class="home" onclick="js:home()">Home</button>
+      </div>
+      </p>
+    </section>
+
+    <section id="result" class="mx-auto mt-5 py-5 px-3">
+      <h2>Bible Verse</h2>
+      <p>
+        <p><span style="color:rgb(146, 145, 145); font-size: 26px;">This verse maybe gives hope</span></p>
+      </p>
+      <div class="resultName mx-5"></div>
+
+      <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto"></div>
+      <p class="resultText" style="font-size: 19px; font-family: 'GongGothicLight';">
+      <div class="resultDesc"></div>
+      </p>
+      <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:setShare()">Share</button>
+      <p>
+        <!-- <button type="button" onclick = "js:begin()" class = "main-button my-3 py-3 mx-5">다시하기</button> -->
+    </section>
+    <script src="./js/app.js"></script>
+    <script src="./js/share.js"></script>
+    <script src="./js/start.js"></script>
+  </div>
 </body>
-
 </html>
