--- a/bible_verse/index.html
+++ b/bible_verse/index.html
@@ -29,7 +29,7 @@
 
   <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   <script>
-    Kakao.init('d359b041b8f22167e4bcea5e372d81c7');
+    Kakao.init('Kakao JS Token KEY');
     Kakao.isInitialized();
   </script>
 </head>
