--- a/bible_verse/resultPage/result-0.html
+++ b/bible_verse/resultPage/result-0.html
@@ -31,7 +31,7 @@
     <h2>Maybe This Verse is giving hope for you</h2>
     <p>
       <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-    <p>Here is bible verse semi-title</p>
+    <p>God endless Love</p>
     </p>
     <div>
       <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,8 @@
       </div>
       <p style="font-size:19px;">
         <div class="resultDesc">
-      Here is bible verse content(specifically)
+      요한복음 3:16-17 KRV<br>
+      하나님이 세상을 이처럼 사랑하사 독생자를 주셨으니 이는 저를 믿는 자마다 멸망치 않고 영생을 얻게 하려 하심이니라,하나님이 그 아들을 세상에 보내신 것은 세상을 심판하려 하심이 아니요 저로 말미암아 세상이 구원을 받게하려 하심이라<br>
     </div>
       </p>
       <script type="text/javascript">
