--- a/bible_verse/resultPage/result-1.html
+++ b/bible_verse/resultPage/result-1.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title</p>
+  <p>Marriage Guide in GOD</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,8 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
+    잠언 19:14 KRV<br>
+    집과 재물은 조상에게서 상속하거니와 슬기로운 아내는 여호와께로서 말미암느니라
     </div>
     </p>
     <script type="text/javascript">
