--- a/bible_verse/resultPage/result-10.html
+++ b/bible_verse/resultPage/result-10.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title</p>
+  <p>Assurance of salvation</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,8 +39,9 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
-    </div>
+    로마서 8:38-39 KRV<br>
+    내가 확신하노니 사망이나 생명이나 천사들이나 권세자들이나 현재 일이나 장래 일이나 능력이나 높음이나 깊음이나 다른 아무 피조물이라도 우리를 우리 주 그리스도 예수 안에 있는 하나님의 사랑에서 끊을 수 없으리라
+   </div>
     </p>
     <script type="text/javascript">
       function moveHome(){
