--- a/bible_verse/resultPage/result-11.html
+++ b/bible_verse/resultPage/result-11.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title(summary)</p>
+  <p>Freedom from loneliness</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,8 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
+    창세기 28:15 KRV<br>
+    내가 너와 함께 있어 네가 어디로 가든지 너를 지키며 너를 이끌어 이 땅으로 돌아오게 할찌라 내가 네게 허락한 것을 다 이루기까지 너를 떠나지 아니하리라 하신지라
     </div>
     </p>
     <script type="text/javascript">
