--- a/bible_verse/resultPage/result-2.html
+++ b/bible_verse/resultPage/result-2.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title</p>
+  <p>Scars of mind and Healing in Jesus</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,8 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
+    시편 91:4 KRV<br>
+    저가 너를 그 깃으로 덮으시리니 네가 그 날개 아래 피하리로다 그의 진실함은 방패와 손 방패가 되나니
     </div>
     </p>
     <script type="text/javascript">
