--- a/bible_verse/resultPage/result-3.html
+++ b/bible_verse/resultPage/result-3.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title</p>
+  <p>God Guidance on Career Path</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,8 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
+    잠언 16:9 KRV<br>
+    사람이 마음으로 자기의 길을 계획할지라도 그 걸음을 인도하는 자는 여호와시니라
     </div>
     </p>
     <script type="text/javascript">
