--- a/bible_verse/resultPage/result-4.html
+++ b/bible_verse/resultPage/result-4.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title</p>
+  <p>Constant sexual problems and healing in God</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,8 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
+    고린도후서 5:17 KRV<br>
+    그런즉 누구든지 그리스도 안에 있으면 새로운 피조물이라 이전 것은 지나갔으니 보라 새것이 되었도다
     </div>
     </p>
     <script type="text/javascript">
