--- a/bible_verse/resultPage/result-6.html
+++ b/bible_verse/resultPage/result-6.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title</p>
+  <p>Freedom form sin</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,8 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
+    갈라디아서 2:20 KRV<br>
+    내가 그리스도와 함께 십자가에 못 박혔나니 그런즉 이제는 내가 산 것이 아니요 오직 내 안에 그리스도께서 사신 것이라 이제 내가 육체 가운데 사는 것은 나를 사랑하사 나를 위하여 자기 몸을 버리신 하나님의 아들을 믿는 믿음 안에서 사는 것이라
     </div>
     </p>
     <script type="text/javascript">
