--- a/bible_verse/resultPage/result-7.html
+++ b/bible_verse/resultPage/result-7.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title</p>
+  <p>Family's problem solved that Jesus works</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,8 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
+    시편 34:18 KRV<br>
+    여호와는 마음이 상한 자에게 가까이 하시고 중심에 통회하는 자를 구원하시는도다
     </div>
     </p>
     <script type="text/javascript">
