--- a/bible_verse/resultPage/result-8.html
+++ b/bible_verse/resultPage/result-8.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title</p>
+  <p>Health problems and God's works overcome the pain</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,9 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
+    누가복음 5:12-13<br>
+    예수께서 한 동네에 계실 때에 온 몸에 나병 들린 사람이 있어 예수를 보고 엎드려 구하여 이르되 주여 원하시면 나를 깨끗하게 하실 수 있나이다 하니<br>
+    예수께서 손을 내밀어 그에게 대시며 이르시되 내가 원하노니 깨끗함을 받으라 하신대 나병이 곧 떠나니라
     </div>
     </p>
     <script type="text/javascript">
