--- a/bible_verse/resultPage/result-9.html
+++ b/bible_verse/resultPage/result-9.html
@@ -31,7 +31,7 @@
   <h2>Maybe This Verse is giving hope for you</h2>
   <p>
   <p><span style="color:rgb(146, 145, 145); font-size: 26px;">Bible verse</span></p>
-  <p>Here is bible verse semi-title</p>
+  <p>Wisdom of controlled Money</p>
   </p>
   <div>
     <div id="resultImg" class="my-5 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
@@ -39,7 +39,11 @@
     </div>
     <p style="font-size:19px;">
     <div class="resultDesc">
-      Here is bible verse content(specifically)
+    마태복음 6:24 KRV<br>
+    한 사람이 두 주인을 섬기지 못할 것이니 혹 이를 미워하며 저를 사랑하거나 혹 이를 중히 여기며 저를 경히 여김이라 너희가 하나님과 재물을 겸하여 섬기지 못하느니라
+    <br>
+    요한일서 3:17 KRV<br>
+    누가 이 세상 재물을 가지고 형제의 궁핍함을 보고도 도와줄 마음을 막으면 하나님의 사랑이 어찌 그 속에 거할까보냐
     </div>
     </p>
     <script type="text/javascript">
