--- a/bible_verse/index.html
+++ b/bible_verse/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://flourishing-panda-3d71c9.netlify.app" />
   <meta property="og:title" content="Bible verse recommendation" />
   <meta property="og:type" content="website"/>
-  <meta property="og:image" content="../img/image-0.png"/> <!--추후 이미지 추가-->
+  <meta property="og:image" content="../img/image-0.png"/>
   <meta property="og:description" content="Bible verse recommendation dased on your psycology"/>
 
   <!--favicon-->
@@ -29,7 +29,7 @@
 
   <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   <script>
-    Kakao.init('Kakao JS Token KEY');
+    Kakao.init('04c03416b564bfbd5ba6b5c81122a818');
     Kakao.isInitialized();
   </script>
 </head>
@@ -47,7 +47,7 @@
         당신의 현재 마음 상태는 어떤가요<br>
         당신의 현재 심리 상태에 맞게 말씀 구절을 추천해 드립니다!
       </p>
-      <button type="button" onclick="js:begin()" class = "main-button my-3 py-3">Start</button>
+      <button type="button" onclick="begin()" class="main-button my-3 py-3">Start</button>
     </section>
 
     <section id="qna">
@@ -59,7 +59,7 @@
       <div class="qBox my-5 py-5 mx-auto"></div>
       <div class="answerBox"></div>
       <div class="home my-5 py-3 mx-auto">
-        <button class="home" onclick="js:home()">Home</button>
+        <button class="home" onclick="home()">Home</button>
       </div>
       </p>
     </section>
@@ -75,7 +75,7 @@
       <p class="resultText" style="font-size: 19px; font-family: 'GongGothicLight';">
       <div class="resultDesc"></div>
       </p>
-      <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:setShare()">Share</button>
+      <button type="button" class="kakao mt-3 py-2 px-3" onclick="setShare()">Share</button>
       <p>
         <!-- <button type="button" onclick = "js:begin()" class = "main-button my-3 py-3 mx-5">다시하기</button> -->
     </section>
